--- a/package.json
+++ b/package.json
@@ -37,8 +37,12 @@
     "current-range": "~1.1.0",
     "current-selection": "~1.1.0",
     "debug": "~2.0.0",
-    "unwrap-range": "0.0.2",
-    "wrap-range": "0.0.2"
+    "dom-iterator": "~0.3.0",
+    "node-contains": "~1.0.0",
+    "selection-is-backward": "~1.0.0",
+    "selection-set-range": "~1.0.0",
+    "unwrap-range": "~1.0.0",
+    "wrap-range": "~1.0.0"
   },
   "devDependencies": {
     "typescript": "~1.0.1",
